@@ -1,5 +1,10 @@
 2008-04-13  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Fix crash when no profile is selected (#364666, thanks Matthew Martin).
+
+2008-04-13  Ross Burton  <ross@burtonini.com>
+
 	* libjuicer/sj-metadata-musicbrainz.c:
 	Clean up _new().
 
